--- a/index.html
+++ b/index.html
@@ -1,28 +1,7 @@
 <!DOCTYPE html>
 
-<html lang="en">
-  <head>
-    <script src="/script.js" defer></script>
-  </head>
-
-  <body>
-    <div class="range">
-      <input type="range" min="1" max="7" steps="1" value="1" />
-    </div>
-
-    <ul class="range-labels">
-      <li class="active selected">Today</li>
-      <li>2 days</li>
-      <li>3 days</li>
-      <li>4 days</li>
-      <li>5 days</li>
-      <li>6 days</li>
-      <li>7 days</li>
-    </ul>
-    <!-- include the Glitch button to show what the webpage is about and
-          to make it easier for folks to view source and remix -->
-
-    <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
-    <script src="https://button.glitch.me/button.js"></script>
-  </body>
-</html>
+<p class="budget">What is your budget?</p>
+<label for="range">
+      <input type="range" name="range" id="range" min="0" max="300" step="5" value="175"/>
+</label>
+ <output for="range" class="output"></output>
